Refatorado dynamodb adpater